--- a/Saved/Config/WindowsEditor/Engine.ini
+++ b/Saved/Config/WindowsEditor/Engine.ini
@@ -29,6 +29,10 @@ Paths=../../../Engine/Plugins/Runtime/HairStrands/Content
 Paths=../../../Engine/Plugins/Runtime/MeshModelingToolset/Content
 Paths=../../../Engine/Plugins/Runtime/ResonanceAudio/Content
 Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
+Paths=../../../Engine/Plugins/Runtime/OpenXR/Content
+Paths=../../../Engine/Plugins/Runtime/Oculus/OculusAudio/Content
+Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
+Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
